# variational-quantum-eigensolver

./: .gitignore  H2.py  H2O_equilibrium_configuration_finder.py  LICENSE  LiH.py  README.md  equilibrium_distance_finder.py  gs_energy_finder.py  h2_equilibrium_distance_finder.py  pyproject.toml  simple_hydrogen.ipynb  tut.ipynb  tutorial_annotation.ipynb
equilibrium_solvers/: H2O.py  LiH.py
